--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=INFO, DEBUG
+log4j.rootLogger=INFO, DEBUG, ERROR
 #
 # Direct log messages to stdout
 log4j.appender.DEBUG=org.apache.log4j.ConsoleAppender
@@ -11,3 +11,8 @@ log4j.appender.INFO=org.apache.log4j.ConsoleAppender
 log4j.appender.INFO.Target=System.out
 log4j.appender.INFO.layout=org.apache.log4j.PatternLayout
 log4j.appender.INFO.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+log4j.appender.ERROR=org.apache.log4j.ConsoleAppender
+log4j.appender.ERROR.Target=System.out
+log4j.appender.ERROR.layout=org.apache.log4j.PatternLayout
+log4j.appender.ERROR.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
