--- a/pom.xml
+++ b/pom.xml
@@ -140,14 +140,14 @@
 					</filesets>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<version>${jetty.plugin.version}</version>
-				<configuration>
-					<scanIntervalSeconds>2</scanIntervalSeconds>
-				</configuration>
-			</plugin>
+			<!--<plugin>-->
+				<!--<groupId>org.eclipse.jetty</groupId>-->
+				<!--<artifactId>jetty-maven-plugin</artifactId>-->
+				<!--<version>${jetty.plugin.version}</version>-->
+				<!--<configuration>-->
+					<!--<scanIntervalSeconds>2</scanIntervalSeconds>-->
+				<!--</configuration>-->
+			<!--</plugin>-->
 
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -157,7 +157,25 @@
 					<target>${maven.compiler.target}</target>
 				</configuration>
 			</plugin>
-
+			<!--<plugin>-->
+				<!--<groupId>org.codehaus.mojo</groupId>-->
+				<!--<artifactId>build-helper-maven-plugin</artifactId>-->
+                <!--<version>3.0.0</version>-->
+				<!--<executions>-->
+					<!--<execution>-->
+						<!--<id>reserve-network-port</id>-->
+						<!--<goals>-->
+							<!--<goal>reserve-network-port</goal>-->
+						<!--</goals>-->
+						<!--&lt;!&ndash;<phase>pre-integration-test</phase>&ndash;&gt;-->
+						<!--<configuration>-->
+							<!--<portNames>-->
+								<!--<portName>maven.tomcat.port</portName>-->
+							<!--</portNames>-->
+						<!--</configuration>-->
+					<!--</execution>-->
+				<!--</executions>-->
+			<!--</plugin>-->
 		</plugins>
 	</build>
 
